--- a/assets/scss/shared/_global-classes.scss
+++ b/assets/scss/shared/_global-classes.scss
@@ -167,6 +167,18 @@
   }
 }
 
+// section overlay (opacity)
+.section-overlay{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: $overlay-color;
+  
+}
+
+
 // colors
 .color-white {
   color: #fff;
