--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -170,6 +170,15 @@
   font-size: 16px;
 }
 
+.section-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: rgba(7, 41, 77, 0.7);
+}
+
 .color-white {
   color: #fff;
 }
@@ -747,28 +756,67 @@ ul {
 }
 
 #our-teachers {
-  background-color: green;
+  background-image: url("../images/teacher_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  position: relative;
+}
+
+#our-teachers .section-header .section-title {
+  color: #fff;
+}
+
+#our-teachers .section-header .section-text {
+  color: #fff;
 }
 
 #our-teachers .profile-card {
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 #our-teachers .profile-card .profile-img-wrapper {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   position: relative;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
+  overflow: hidden;
 }
 
 #our-teachers .profile-card .profile-img-wrapper .profile-img {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   width: 100%;
+}
+
+#our-teachers .profile-card .profile-img-wrapper::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0;
+  background-color: black;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+#our-teachers .profile-card:hover .profile-img-wrapper::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0.5;
+  background-color: black;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 #our-teachers .profile-card .profile-info {
@@ -787,19 +835,6 @@ ul {
 #our-teachers .profile-card .profile-info span {
   display: block;
   color: #888888;
-}
-
-#our-teachers .profile-card:hover .profile-img-wrapper::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0.5;
-  background-color: black;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
 }
 
 #our-blog .item-box .item-box-img-wrap {
